--- a/package.json
+++ b/package.json
@@ -20,8 +20,18 @@
     "@angular/platform-browser": "~8.2.11",
     "@angular/platform-browser-dynamic": "~8.2.11",
     "@angular/router": "~8.2.11",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.2",
+    "angular2-flash-messages": "^3.0.1",
     "angularfire2": "^5.2.1",
+    "bootstrap": "^4.3.1",
+    "bootstrap-social": "^5.1.1",
     "firebase": "^7.2.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
