--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,7 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/font-awesome/css/font-awesome.css",
-              "src/bootstrap-social.css"
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
