--- a/package.json
+++ b/package.json
@@ -27,11 +27,8 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.2",
     "angular2-flash-messages": "^3.0.1",
     "angularfire2": "^5.2.1",
-    "bootstrap": "^4.3.1",
-    "bootstrap-social": "^5.1.1",
     "firebase": "^7.2.1",
-    "jquery": "^3.4.1",
-    "popper.js": "^1.16.0",
+    "font-awesome": "^4.7.0",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
