--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angularfire2": "^5.2.1",
     "firebase": "^7.2.1",
     "font-awesome": "^4.7.0",
+    "ng-flash-messages": "^0.3.0",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
